--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
     <html lang="ru">
         <head>
             <title>Git</title>
+            <meta charset="utf-8">
+            <style>
+                body{
+                    margin: 0px;
+                    padding: 0px;
+                }
+                </style>
         </head>
         <body>
             <h1>1.</h1>
